--- a/package.json
+++ b/package.json
@@ -2,9 +2,18 @@
   "name": "@23blocks/ng-gateway",
   "version": "1.0.1",
   "description": "Gateway Client for Angular ",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config jestconfig.json",
+    "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json",
+    "prepare" : "npm run build",
+    "prepublishOnly" : "npm test && npm run lint",
+    "preversion" : "npm run lint",
+    "version" : "npm run format && git add -A src",
+    "postversion" : "git push && git push --tags"
   },
   "repository": {
     "type": "git",
@@ -21,5 +30,17 @@
   "bugs": {
     "url": "https://github.com/23blocks-OS/ng-gateway/issues"
   },
-  "homepage": "https://github.com/23blocks-OS/ng-gateway#readme"
+  "files": [
+    "lib/**/*"
+  ],
+  "homepage": "https://github.com/23blocks-OS/ng-gateway#readme",
+  "devDependencies": {
+    "@types/jest": "^26.0.16",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.1",
+    "ts-jest": "^26.4.4",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.1.2"
+  }
 }
